logs/test-amd64-fix-6.txt
AS  kernel/arch/amd64/boot/start.S
AS  kernel/arch/amd64/cpu/isr_stubs.S
AS  kernel/arch/amd64/cpu/syscall.S
AS  kernel/arch/amd64/cpu/context.S
AS  kernel/arch/amd64/boot/trampoline.S
CC  kernel/arch/amd64/cpu/cpu.c
CC  kernel/arch/amd64/cpu/idt.c
CC  kernel/arch/amd64/cpu/gdt.c
CC  kernel/arch/amd64/cpu/msr.c
CC  kernel/arch/amd64/cpu/apic.c
CC  kernel/arch/amd64/mm/mmu.c
CC  kernel/arch/amd64/mm/uaccess.c
CC  kernel/drivers/uart/16550.c
CC  kernel/drivers/timer/pic_pit.c
CC  kernel/arch/amd64/platform/platform.c
CC  kernel/arch/amd64/hal.c
CC  kernel/drivers/pci/pci.c
kernel/drivers/pci/pci.c: In function 'pci_register_callback':
kernel/drivers/pci/pci.c:136:5: error: implicit declaration of function 'memset' [-Wimplicit-function-declaration]
  136 |     memset(&dev, 0, sizeof(dev));
      |     ^~~~~~
kernel/drivers/pci/pci.c:9:1: note: 'memset' is defined in header '<string.h>'; this is probably fixable by adding '#include <string.h>'
    8 | #include <drivers/pci.h>
  +++ |+#include <string.h>
    9 | 
kernel/drivers/pci/pci.c: At top level:
kernel/drivers/pci/pci.c:149:6: error: no previous prototype for 'pci_scan_and_register' [-Werror=missing-prototypes]
  149 | void pci_scan_and_register(void) {
      |      ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make: *** [build/amd64/kernel/drivers/pci/pci.o] Error 1
